updated authentication
I have made the authentication more secure by not including it within the url.
